# AI_IDE

./: CMakeLists.txt  Models_Matrices.cpp  Models_Matrices.h  README.md  README.txt  ai_model.cpp  ai_model.h  arrange_strings.cpp  arrange_strings.h  custom_text_edit.cpp  custom_text_edit.h  input.txt  introduction of ai compiler  main.cpp  math.cpp  math.h  matrix.cpp  matrix.h  methods.cpp  methods.h  metodlar  model.txt  output.txt  window.cpp  window.h  window.ui
